# Coding-AI-Agent

./: README.md  main.py  pyproject.toml
L1/: L1.ipynb  sbx.cache  secret.txt
L2/: L4.ipynb  sbx.cache
L3/: L5.ipynb  sbx.cache
L4/: L6.ipynb  sbx.cache
Project/: project.ipynb
